[gd_scene load_steps=2 format=3 uid="uid://bqqx7gmlnlfb3"]

[ext_resource type="Script" uid="uid://c0lw2pjj3dghf" path="res://scenes/main_menu.gd" id="1_yqeox"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yqeox")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.513726, 0.513726, 0.513726, 0.823529)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -50.5
offset_right = 32.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Graj"

[node name="TutorialButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Samouczek"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Wyjdz"

[node name="TutorialLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -567.0
offset_top = -170.0
offset_right = -152.0
offset_bottom = 269.0
grow_horizontal = 2
grow_vertical = 2
text = "🕹️ Sterowanie:
W, A, S, D → Ruch
Mysz → Celowanie i atak
E → Interakcja z NPC
ESC → Menu pauzy
P → Panel statystyk
🔥 Umiejętności:
1 – Fireball → Rzuca kulę ognia
2 – Blackhole → Tworzy czarną dziurę
3 – Lightning → Uderza piorunem
4 – Shield → Tworzy ochronną tarczę
📈 Rozwój Postaci:
Pokonując wrogów zdobywasz EXP
Poziomy dają punkty na rozwój Speed, Attack, HP
Pasek EXP znajduje się na dole ekranu
"
